--- a/arch/arm/configs/msm7627_blade_defconfig
+++ b/arch/arm/configs/msm7627_blade_defconfig
@@ -292,6 +292,8 @@ CONFIG_MACH_BLADE=y
 # CONFIG_MACH_ROAMER is not set
 # CONFIG_MACH_BLUETICK is not set
 CONFIG_ZTE_FTM_FLAG_SUPPORT=y
+# CONFIG_ZTE_GEN1 is not set
+CONFIG_ZTE_GEN2=y
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_PHYS_OFFSET=0x02600000
 CONFIG_MSM_AMSS_VERSION=6225
