leds: Add option to keep LEDs on during suspend

--- a/arch/arm/configs/cyanogen_v9_defconfig
+++ b/arch/arm/configs/cyanogen_v9_defconfig
@@ -1,11 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-<<<<<<< HEAD:arch/arm/configs/cm7gen2_defconfig
-# Sat Sep  3 02:20:38 2011
-=======
-# Sat Oct  8 13:05:39 2011
->>>>>>> 7faa7dc... leds: Add option to keep LEDs on during suspend:arch/arm/configs/cyanogen_blade_defconfig
+# Sat Oct  8 13:04:04 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -141,7 +137,8 @@ CONFIG_HAVE_CLK=y
 # GCOV-based kernel profiling
 #
 # CONFIG_GCOV_KERNEL is not set
-# CONFIG_SLOW_WORK is not set
+CONFIG_SLOW_WORK=y
+# CONFIG_SLOW_WORK_DEBUG is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
@@ -161,12 +158,15 @@ CONFIG_LBDAF=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-# CONFIG_IOSCHED_DEADLINE is not set
+CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_CFQ is not set
+CONFIG_DEFAULT_BFQ=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="bfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -272,18 +272,17 @@ CONFIG_MSM_REMOTE_SPINLOCK_SWP=y
 #
 # MSM Board Selection
 #
-CONFIG_MACH_MSM7X27_SURF=y
-CONFIG_MACH_MSM7X27_FFA=y
+# CONFIG_MACH_MSM7X27_SURF is not set
+# CONFIG_MACH_MSM7X27_FFA is not set
 CONFIG_ZTE_PLATFORM=y
 CONFIG_F3_LOG=y
-CONFIG_MACH_BLADE=y
+# CONFIG_MACH_BLADE is not set
 # CONFIG_MACH_BLADE2 is not set
 # CONFIG_MACH_NOVA is not set
 # CONFIG_MACH_SAILBOAT is not set
 # CONFIG_MACH_TURIES is not set
-# CONFIG_MACH_BLADE_CAMERA5MP is not set
 # CONFIG_MACH_MOONCAKE is not set
-# CONFIG_MACH_V9 is not set
+CONFIG_MACH_V9=y
 # CONFIG_MACH_RAISE is not set
 # CONFIG_MACH_JOE is not set
 # CONFIG_MACH_R750 is not set
@@ -329,7 +328,7 @@ CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
 CONFIG_MSM_IDLE_STATS_BUCKET_SHIFT=2
 CONFIG_MSM_IDLE_STATS_BUCKET_COUNT=10
 CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
-CONFIG_MSM_GPIO_WAKE=y
+# CONFIG_MSM_GPIO_WAKE is not set
 # CONFIG_HTC_HEADSET is not set
 # CONFIG_HTC_PWRSINK is not set
 # CONFIG_MSM_FIQ_SUPPORT is not set
@@ -359,10 +358,11 @@ CONFIG_MSM_RPC_OEM_RAPI=y
 CONFIG_MSM_RPCSERVER_HANDSET=y
 CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=604800
 CONFIG_MSM_CPU_FREQ_MIN=245760
 CONFIG_MSM_CPU_FREQ_OVERCLOCK=y
-CONFIG_MSM_CPU_FREQ_OVERCLOCK_AHB=y
+# CONFIG_MSM_CPU_FREQ_OVERCLOCK_AHB is not set
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_MSM_ADSP=y
@@ -501,12 +501,17 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTASS=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 # CONFIG_CPU_IDLE is not set
 CONFIG_CPU_FREQ_MSM=y
 
@@ -1115,7 +1120,7 @@ CONFIG_DUMMY=y
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
 # CONFIG_EQUALIZER is not set
-# CONFIG_TUN is not set
+CONFIG_TUN=m
 # CONFIG_VETH is not set
 # CONFIG_PHYLIB is not set
 CONFIG_NET_ETHERNET=y
@@ -1192,7 +1197,7 @@ CONFIG_INPUT=y
 # CONFIG_INPUT_MOUSEDEV is not set
 # CONFIG_INPUT_JOYDEV is not set
 CONFIG_INPUT_EVDEV=y
-# CONFIG_INPUT_EVBUG is not set
+CONFIG_INPUT_EVBUG=m
 # CONFIG_INPUT_KEYRESET is not set
 
 #
@@ -1218,9 +1223,9 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_INEXIO is not set
 # CONFIG_TOUCHSCREEN_MK712 is not set
 # CONFIG_TOUCHSCREEN_PENMOUNT is not set
-# CONFIG_TOUCHSCREEN_MSM is not set
+CONFIG_TOUCHSCREEN_MSM=y
 # CONFIG_TOUCHSCREEN_QT602240 is not set
-CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI_UPDATE is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_3K is not set
 # CONFIG_TOUCHSCREEN_TOUCHRIGHT is not set
@@ -1233,12 +1238,12 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_CY8C_TS is not set
 # CONFIG_DOWNLOAD_FIRMWARE is not set
-CONFIG_TOUCHSCREEN_CYPRESS_I2C_RMI=y
-# CONFIG_TOUCHSCREEN_MXT224 is not set
+# CONFIG_TOUCHSCREEN_CYPRESS_I2C_RMI is not set
+CONFIG_TOUCHSCREEN_MXT224=y
 # CONFIG_TOUCHSCREEN_CYTTSP_I2C is not set
 # CONFIG_TOUCHSCREEN_FOCALTECH is not set
 # CONFIG_TOUCHSCREEN_FOCALTECH_NEW is not set
-# CONFIG_TOUCHSCREEN_VIRTUAL_KEYS is not set
+CONFIG_TOUCHSCREEN_VIRTUAL_KEYS=y
 # CONFIG_MINI_RACER is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
@@ -1360,8 +1365,8 @@ CONFIG_I2C_MSM=y
 #
 # CONFIG_MSENSORS_FROM_AUXI2C_TO_I2C is not set
 # CONFIG_GSENSORS_FROM_AUXI2C_TO_I2C is not set
-CONFIG_SENSORS_TSL2771=y
-# CONFIG_SENSORS_BH1721 is not set
+# CONFIG_SENSORS_TSL2771 is not set
+CONFIG_SENSORS_BH1721=y
 # CONFIG_SENSORS_AKM8962 is not set
 CONFIG_SENSORS_AK8973=y
 # CONFIG_SENSOR_LIS302DL is not set
@@ -1393,7 +1398,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_MAX17040 is not set
 CONFIG_BATTERY_MSM=y
 # CONFIG_BATTERY_MSM_FAKE is not set
-# CONFIG_TI_GAUGE is not set
+CONFIG_TI_GAUGE=y
 # CONFIG_HWMON is not set
 # CONFIG_THERMAL is not set
 # CONFIG_WATCHDOG is not set
@@ -1438,12 +1443,12 @@ CONFIG_VIDEO_MEDIA=y
 #
 CONFIG_IR_CORE=y
 CONFIG_VIDEO_IR=y
-# CONFIG_RC_MAP is not set
-# CONFIG_IR_NEC_DECODER is not set
-# CONFIG_IR_RC5_DECODER is not set
-# CONFIG_IR_RC6_DECODER is not set
-# CONFIG_IR_JVC_DECODER is not set
-# CONFIG_IR_SONY_DECODER is not set
+CONFIG_RC_MAP=y
+CONFIG_IR_NEC_DECODER=y
+CONFIG_IR_RC5_DECODER=y
+CONFIG_IR_RC6_DECODER=y
+CONFIG_IR_JVC_DECODER=y
+CONFIG_IR_SONY_DECODER=y
 # CONFIG_IR_IMON is not set
 # CONFIG_MEDIA_ATTACH is not set
 CONFIG_MEDIA_TUNER=y
@@ -1482,29 +1487,27 @@ CONFIG_MSM_CAMERA=y
 # CONFIG_MT9D112 is not set
 # CONFIG_MT9P012 is not set
 # CONFIG_MT9V113 is not set
-CONFIG_MT9P111=y
-# CONFIG_MT9P111_MCNEX is not set
-CONFIG_MT9P111_SAMSUNG_FPC=y
-# CONFIG_MT9P111_SAMSUNG_SOCKET is not set
+# CONFIG_MT9P111 is not set
 CONFIG_MT9T11X=y
 CONFIG_MT9T11X_QTECH_MCNEX_FPC=y
-CONFIG_OV5642=y
-CONFIG_OV5642_GLOBALOPTICS=y
+# CONFIG_OV5642 is not set
 # CONFIG_OV5640 is not set
-# CONFIG_MT9D115 is not set
+# CONFIG_HI704 is not set
+CONFIG_MT9D115=y
+# CONFIG_MT9D115_QTECH_SUNNY_SOCKET is not set
+CONFIG_MT9D115_QTECH_SUNNY_FPC=y
 # CONFIG_MT9D113 is not set
-CONFIG_S5K5CAGX=y
-CONFIG_S5K5CAGX_SAMSUNG_FPC=y
-CONFIG_S5K5CAGX_MCNEX_QTECH=y
-CONFIG_S5K5CAGX_MCNEX_QTECH_FPC=y
+# CONFIG_S5K5CAGX is not set
+# CONFIG_S5K5CAGX_MCNEX_QTECH is not set
 # CONFIG_MT9P012_KM is not set
 # CONFIG_S5K3E2FX is not set
 # CONFIG_VB6801 is not set
 CONFIG_SENSOR_ADAPTER=y
 CONFIG_SENSOR_INFO=y
 # CONFIG_MSM_CAMERA_FLASH is not set
-# CONFIG_MSM_GEMINI is not set
+CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
 # CONFIG_CAMERA_N880 is not set
+# CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_RADIO_ADAPTERS is not set
 CONFIG_DAB=y
 
@@ -1584,8 +1587,8 @@ CONFIG_FB_MSM_LCDC_PANEL=y
 # CONFIG_FB_MSM_LCDC_LEAD_QVGA is not set
 # CONFIG_FB_MSM_LCDC_HIMAX_QVGA is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_QVGA is not set
-CONFIG_FB_MSM_LCDC_OLED_WVGA=y
-# CONFIG_FB_MSM_LCDC_V9_WVGA is not set
+# CONFIG_FB_MSM_LCDC_OLED_WVGA is not set
+CONFIG_FB_MSM_LCDC_V9_WVGA=y
 # CONFIG_FB_MSM_LCDC_BLADE2_WVGA is not set
 # CONFIG_FB_MSM_LCDC_LEAD_HVGA is not set
 # CONFIG_FB_MSM_LCDC_NOVA_HVGA is not set
@@ -1606,12 +1609,13 @@ CONFIG_FB_MSM_LCDC_OLED_WVGA=y
 # CONFIG_FB_MSM_LCDC_HIMAX_WQVGA_PANEL727 is not set
 # CONFIG_FB_MSM_LCDC_HIMAX_WQVGA_PANEL722 is not set
 # CONFIG_FB_MSM_LCDC_SKATE_WVGA_PANEL is not set
+# CONFIG_FB_MSM_LCDC_SKATE_TEST_SAMPLE_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_LEAD_QVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_HIMAX_QVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_HVGA_ROAMER_PANEL is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_QVGA_PANEL is not set
-CONFIG_FB_MSM_LCDC_OLED_WVGA_PANEL=y
-# CONFIG_FB_MSM_LCDC_V9_WVGA_PANEL is not set
+# CONFIG_FB_MSM_LCDC_OLED_WVGA_PANEL is not set
+CONFIG_FB_MSM_LCDC_V9_WVGA_PANEL=y
 # CONFIG_FB_MSM_LCDC_BLADE2_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_LEAD_HVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_NOVA_HVGA_PANEL is not set
@@ -1828,8 +1832,7 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_ZTE_NLED_BLINK_WHILE_APP_SUSPEND is not set
 CONFIG_LED_ON_AFTER_SUSPEND=y
 # CONFIG_LEDS_PCA9532 is not set
-CONFIG_LEDS_GPIO=y
-CONFIG_LEDS_GPIO_PLATFORM=y
+# CONFIG_LEDS_GPIO is not set
 # CONFIG_LEDS_LP3944 is not set
 CONFIG_LEDS_CPLD=y
 # CONFIG_LEDS_PCA955X is not set
@@ -1845,7 +1848,7 @@ CONFIG_RTC_CLASS=y
 CONFIG_RTC_HCTOSYS=y
 CONFIG_RTC_HCTOSYS_DEVICE="rtc0"
 CONFIG_RTC_DEBUG=y
-CONFIG_ZTE_FIX_ALARM_SYNC=y
+# CONFIG_ZTE_FIX_ALARM_SYNC is not set
 
 #
 # RTC interfaces
@@ -1957,9 +1960,15 @@ CONFIG_EXT3_FS=y
 CONFIG_EXT3_FS_XATTR=y
 # CONFIG_EXT3_FS_POSIX_ACL is not set
 # CONFIG_EXT3_FS_SECURITY is not set
-# CONFIG_EXT4_FS is not set
+CONFIG_EXT4_FS=y
+CONFIG_EXT4_FS_XATTR=y
+# CONFIG_EXT4_FS_POSIX_ACL is not set
+# CONFIG_EXT4_FS_SECURITY is not set
+# CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
+CONFIG_JBD2=y
+# CONFIG_JBD2_DEBUG is not set
 CONFIG_FS_MBCACHE=y
 # CONFIG_REISERFS_FS is not set
 # CONFIG_JFS_FS is not set
@@ -1998,7 +2007,9 @@ CONFIG_FAT_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
+CONFIG_NTFS_RW=y
 
 #
 # Pseudo filesystems
@@ -2057,7 +2068,13 @@ CONFIG_SUNRPC=y
 # CONFIG_RPCSEC_GSS_SPKM3 is not set
 # CONFIG_SMB_FS is not set
 # CONFIG_CEPH_FS is not set
-# CONFIG_CIFS is not set
+CONFIG_CIFS=y
+# CONFIG_CIFS_STATS is not set
+CONFIG_CIFS_WEAK_PW_HASH=y
+CONFIG_CIFS_XATTR=y
+# CONFIG_CIFS_POSIX is not set
+# CONFIG_CIFS_DEBUG2 is not set
+# CONFIG_CIFS_EXPERIMENTAL is not set
 # CONFIG_NCP_FS is not set
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
@@ -2084,7 +2101,7 @@ CONFIG_MSDOS_PARTITION=y
 # CONFIG_EFI_PARTITION is not set
 # CONFIG_SYSV68_PARTITION is not set
 CONFIG_NLS=y
-CONFIG_NLS_DEFAULT="iso8859-1"
+CONFIG_NLS_DEFAULT="utf8"
 CONFIG_NLS_CODEPAGE_437=y
 # CONFIG_NLS_CODEPAGE_737 is not set
 # CONFIG_NLS_CODEPAGE_775 is not set
@@ -2122,7 +2139,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_ISO8859_15 is not set
 # CONFIG_NLS_KOI8_R is not set
 # CONFIG_NLS_KOI8_U is not set
-# CONFIG_NLS_UTF8 is not set
+CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 
 #
@@ -2315,8 +2332,8 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 # Compression
 #
 CONFIG_CRYPTO_DEFLATE=y
-CONFIG_CRYPTO_ZLIB=y
-CONFIG_CRYPTO_LZO=y
+# CONFIG_CRYPTO_ZLIB is not set
+# CONFIG_CRYPTO_LZO is not set
 
 #
 # Random Number Generation
@@ -2349,4 +2366,3 @@ CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT=y
 CONFIG_HAS_DMA=y
 CONFIG_NLATTR=y
-
