--- a/arch/arm/configs/cm7gen2_defconfig
+++ b/arch/arm/configs/cm7gen2_defconfig
@@ -79,6 +79,7 @@ CONFIG_RESOURCE_COUNTERS=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
+CONFIG_SCHED_AUTOGROUP=y
 # CONFIG_BLK_CGROUP is not set
 # CONFIG_SYSFS_DEPRECATED_V2 is not set
 CONFIG_RELAY=y
@@ -815,7 +816,8 @@ CONFIG_NET_SCHED=y
 # Queueing/Scheduling
 #
 # CONFIG_NET_SCH_CBQ is not set
-CONFIG_NET_SCH_HTB=y
+# CONFIG_NET_SCH_HTB is not set
+CONFIG_NET_SCH_SFB=y
 # CONFIG_NET_SCH_HFSC is not set
 # CONFIG_NET_SCH_PRIO is not set
 # CONFIG_NET_SCH_MULTIQ is not set
