--- a/arch/arm/configs/2gvm_gen2_defconfig
+++ b/arch/arm/configs/2gvm_gen2_defconfig
@@ -42,10 +42,10 @@ CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_BZIP2=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
-CONFIG_KERNEL_GZIP=y
+# CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_BZIP2 is not set
 # CONFIG_KERNEL_LZMA is not set
-# CONFIG_KERNEL_XZ is not set
+CONFIG_KERNEL_XZ=y
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
@@ -481,7 +481,9 @@ CONFIG_SPLIT_PTLOCK_CPUS=4
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_VIRT_TO_BUS=y
-CONFIG_KSM=y
+# CONFIG_KSM is not set
+CONFIG_FRONTSWAP=y
+CONFIG_CLEANCACHE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_ALIGNMENT_TRAP=y
 CONFIG_ALLOW_CPU_ALIGNMENT=y
@@ -507,10 +509,10 @@ CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_DEBUG=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_STAT_DETAILS=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
@@ -1261,7 +1263,7 @@ CONFIG_TOUCHSCREEN_CYPRESS_I2C_RMI=y
 # CONFIG_TOUCHSCREEN_MXT224 is not set
 # CONFIG_TOUCHSCREEN_CYTTSP_I2C is not set
 CONFIG_TOUCHSCREEN_FOCALTECH=y
-# CONFIG_TOUCHSCREEN_FOCALTECH_NEW is not set
+CONFIG_TOUCHSCREEN_FOCALTECH_NEW=y
 # CONFIG_TOUCHSCREEN_VIRTUAL_KEYS is not set
 # CONFIG_MINI_RACER is not set
 CONFIG_INPUT_MISC=y
