--- a/arch/arm/configs/cm7gen2_defconfig
+++ b/arch/arm/configs/cm7gen2_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-# Tue Sep 27 13:36:23 2011
+# Tue Jan 19 00:18:52 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -163,8 +163,8 @@ CONFIG_LBDAF=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_CFQ=y
+# CONFIG_IOSCHED_DEADLINE is not set
+# CONFIG_IOSCHED_CFQ is not set
 CONFIG_IOSCHED_BFQ=y
 # CONFIG_CGROUP_BFQIO is not set
 CONFIG_IOSCHED_VR=y
@@ -480,7 +480,7 @@ CONFIG_SPLIT_PTLOCK_CPUS=4
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_VIRT_TO_BUS=y
-CONFIG_KSM=y
+# CONFIG_KSM is not set
 CONFIG_FRONTSWAP=y
 CONFIG_CLEANCACHE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=8192
@@ -516,6 +516,7 @@ CONFIG_CPU_FREQ_STAT_DETAILS=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
+# CONFIG_CPU_FREQ_GOV_SAVAGEDZEN is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_LAGFREE=y
 # CONFIG_CPU_FREQ_GOV_SMARTASS is not set
@@ -525,7 +526,6 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
-CONFIG_CPU_FREQ_GOV_SAVAGEDZEN=y
 # CONFIG_CPU_FREQ_GOV_BRAZILIANWAX is not set
 CONFIG_CPU_FREQ_GOV_MINMAX=y
 CONFIG_CPU_FREQ_MIN_TICKS=10
@@ -1384,8 +1384,6 @@ CONFIG_I2C_MSM=y
 #
 # CONFIG_MSENSORS_FROM_AUXI2C_TO_I2C is not set
 # CONFIG_GSENSORS_FROM_AUXI2C_TO_I2C is not set
-CONFIG_SENSORS_ONA3301=y
-CONFIG_SENSORS_ISL29026=y
 CONFIG_SENSORS_TSL2771=y
 # CONFIG_SENSORS_BH1721 is not set
 # CONFIG_SENSORS_AKM8962 is not set
@@ -1401,7 +1399,6 @@ CONFIG_SENSOR_ACCELERATOR=y
 # CONFIG_I2C_DEBUG_BUS is not set
 # CONFIG_I2C_DEBUG_CHIP is not set
 # CONFIG_SPI is not set
-
 
 #
 # PPS support
@@ -1515,10 +1512,9 @@ CONFIG_MT9P111_SAMSUNG_FPC=y
 # CONFIG_MT9P111_SAMSUNG_SOCKET is not set
 CONFIG_MT9T11X=y
 CONFIG_MT9T11X_QTECH_MCNEX_FPC=y
-CONFIG_OV5640=y
-CONFIG_OV5640_GLOBALOPTICS=y
 CONFIG_OV5642=y
 CONFIG_OV5642_GLOBALOPTICS=y
+# CONFIG_OV5640 is not set
 # CONFIG_HI704 is not set
 # CONFIG_MT9D115 is not set
 # CONFIG_MT9D113 is not set
@@ -1547,9 +1543,10 @@ CONFIG_MSM_KGSL=y
 # CONFIG_MSM_KGSL_PSTMRTMDMP_CP_STAT_NO_DETAIL is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_RB_HEX is not set
-# CONFIG_MSM_KGSL_PSTMRTMDMP_NO_REG_DUMP is not set
+CONFIG_MSM_KGSL_GPUMMU=y
 CONFIG_MSM_KGSL_MMU=y
 # CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
+CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0xFFF0000
 CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
 # CONFIG_MSM_KGSL_DISABLE_SHADOW_WRITES is not set
 # CONFIG_VGASTATE is not set
@@ -1981,23 +1978,22 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 #
 # File systems
 #
-# CONFIG_EXT2_FS is not set
-# CONFIG_EXT2_FS_XATTR is not set
+CONFIG_EXT2_FS=y
+CONFIG_EXT2_FS_XATTR=y
 # CONFIG_EXT2_FS_POSIX_ACL is not set
 # CONFIG_EXT2_FS_SECURITY is not set
 # CONFIG_EXT2_FS_XIP is not set
-# CONFIG_EXT3_FS is not set
+CONFIG_EXT3_FS=y
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
-# CONFIG_EXT3_FS_XATTR is not set
+CONFIG_EXT3_FS_XATTR=y
 # CONFIG_EXT3_FS_POSIX_ACL is not set
 # CONFIG_EXT3_FS_SECURITY is not set
 CONFIG_EXT4_FS=y
-CONFIG_EXT4_USE_FOR_EXT23=y
 CONFIG_EXT4_FS_XATTR=y
 # CONFIG_EXT4_FS_POSIX_ACL is not set
 # CONFIG_EXT4_FS_SECURITY is not set
 # CONFIG_EXT4_DEBUG is not set
-# CONFIG_JBD is not set
+CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
@@ -2101,7 +2097,7 @@ CONFIG_RPCSEC_GSS_KRB5=y
 CONFIG_RPCSEC_GSS_SPKM3=y
 # CONFIG_SMB_FS is not set
 # CONFIG_CEPH_FS is not set
-CONFIG_CIFS=m
+CONFIG_CIFS=y
 # CONFIG_CIFS_STATS is not set
 CONFIG_CIFS_WEAK_PW_HASH=y
 CONFIG_CIFS_XATTR=y
@@ -2404,4 +2400,3 @@ CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT=y
 CONFIG_HAS_DMA=y
 CONFIG_NLATTR=y
-
