Camera : Add Support to OV5640 Sensor

--- a/arch/arm/configs/cm7gen2_defconfig
+++ b/arch/arm/configs/cm7gen2_defconfig
@@ -1388,7 +1388,7 @@ CONFIG_SENSORS_TSL2771=y
 # CONFIG_SENSORS_BH1721 is not set
 # CONFIG_SENSORS_AKM8962 is not set
 CONFIG_SENSORS_AK8973=y
-# CONFIG_SENSOR_LIS302DL is not set
+# CONFIG_SENSOR_LIS302DL is no set
 # CONFIG_SENSOR_ADXL34X is not set
 CONFIG_SENSOR_ACCELERATOR=y
 # CONFIG_SENSORS_PCA963X is not set
@@ -1512,9 +1512,10 @@ CONFIG_MT9P111_SAMSUNG_FPC=y
 # CONFIG_MT9P111_SAMSUNG_SOCKET is not set
 CONFIG_MT9T11X=y
 CONFIG_MT9T11X_QTECH_MCNEX_FPC=y
+CONFIG_OV5640=y
+CONFIG_OV5640_GLOBALOPTICS=y
 CONFIG_OV5642=y
 CONFIG_OV5642_GLOBALOPTICS=y
-# CONFIG_OV5640 is not set
 # CONFIG_HI704 is not set
 # CONFIG_MT9D115 is not set
 # CONFIG_MT9D113 is not set
