Update Default CM7 config to match New Blades

--- a/arch/arm/configs/cm7gen2_defconfig
+++ b/arch/arm/configs/cm7gen2_defconfig
@@ -1384,11 +1384,13 @@ CONFIG_I2C_MSM=y
 #
 # CONFIG_MSENSORS_FROM_AUXI2C_TO_I2C is not set
 # CONFIG_GSENSORS_FROM_AUXI2C_TO_I2C is not set
+CONFIG_SENSORS_ONA3301=y
+CONFIG_SENSORS_ISL29026=y
 CONFIG_SENSORS_TSL2771=y
 # CONFIG_SENSORS_BH1721 is not set
 # CONFIG_SENSORS_AKM8962 is not set
 CONFIG_SENSORS_AK8973=y
-# CONFIG_SENSOR_LIS302DL is no set
+# CONFIG_SENSOR_LIS302DL is not set
 # CONFIG_SENSOR_ADXL34X is not set
 CONFIG_SENSOR_ACCELERATOR=y
 # CONFIG_SENSORS_PCA963X is not set
@@ -1399,6 +1401,7 @@ CONFIG_SENSOR_ACCELERATOR=y
 # CONFIG_I2C_DEBUG_BUS is not set
 # CONFIG_I2C_DEBUG_CHIP is not set
 # CONFIG_SPI is not set
+
 
 #
 # PPS support
@@ -2097,7 +2100,7 @@ CONFIG_RPCSEC_GSS_KRB5=y
 CONFIG_RPCSEC_GSS_SPKM3=y
 # CONFIG_SMB_FS is not set
 # CONFIG_CEPH_FS is not set
-CONFIG_CIFS=y
+CONFIG_CIFS=m
 # CONFIG_CIFS_STATS is not set
 CONFIG_CIFS_WEAK_PW_HASH=y
 CONFIG_CIFS_XATTR=y
