Update Default Config

--- a/arch/arm/configs/cm7gen2_defconfig
+++ b/arch/arm/configs/cm7gen2_defconfig
@@ -572,7 +572,7 @@ CONFIG_EARLYSUSPEND=y
 # CONFIG_CONSOLE_EARLYSUSPEND is not set
 CONFIG_FB_EARLYSUSPEND=y
 # CONFIG_APM_EMULATION is not set
-CONFIG_ZTE_SUSPEND_WAKEUP_MONITOR=y
+# CONFIG_ZTE_SUSPEND_WAKEUP_MONITOR is not set
 CONFIG_SCREEN_ON_WITHOUT_KEYOCDE=y
 # CONFIG_PM_RUNTIME is not set
 CONFIG_PM_OPS=y
@@ -1854,6 +1854,7 @@ CONFIG_MMC_MSM_SDC2_SUPPORT=y
 # CONFIG_MMC_MSM_SDC5_SUPPORT is not set
 CONFIG_MMC_MSM_PROG_DONE_SCAN=y
 CONFIG_ATH_WIFI=y
+CONFIG_WOW_BY_SDIO_DATA1=y
 # CONFIG_BCM_WIFI is not set
 # CONFIG_MEMSTICK is not set
 CONFIG_NEW_LEDS=y
