--- a/arch/arm/configs/cm7gen2_defconfig
+++ b/arch/arm/configs/cm7gen2_defconfig
@@ -1145,6 +1145,7 @@ CONFIG_DM_MULTIPATH_QL=y
 CONFIG_DM_MULTIPATH_ST=y
 CONFIG_DM_DELAY=y
 CONFIG_DM_UEVENT=y
+CONFIG_DM_CACHE=y
 CONFIG_NETDEVICES=y
 CONFIG_DUMMY=y
 # CONFIG_BONDING is not set
