--- a/arch/arm/configs/cm7gen2_defconfig
+++ b/arch/arm/configs/cm7gen2_defconfig
@@ -480,7 +480,7 @@ CONFIG_SPLIT_PTLOCK_CPUS=4
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_VIRT_TO_BUS=y
-# CONFIG_KSM is not set
+CONFIG_KSM=y
 CONFIG_FRONTSWAP=y
 CONFIG_CLEANCACHE=y
 CONFIG_ZCACHE=y
